# poke-adocao

./: .gitignore  App.tsx  Makefile  README.md  app.json  eas.json  fix_headers.py  fix_syntax.py  fix_syntax2.py  fix_syntax3.py  package-lock.json  package.json  test_profile_update.py
backend/: pyproject.toml  requirements.txt  seed_db.py
backend/app/: adoption_service.py  auth_service.py  database.py  main.py  models.py  pokeapi_service.py  schemas.py  spatial_service.py
backend/tests/: __init__.py  conftest.py  test_adoption_service.py  test_api.py  test_auth.py  test_initial.py  test_pokeapi_service.py  test_spatial_service.py  test_ui_mock.py
docs/latex/: main.tex  mylib-style.sty  references.bib
docs/latex/capitulos/: 01-introducao.tex  02-objetivos.tex  03-requisitos.tex  04-design-arquitetura.tex  06-testes-validacao.tex  07-conclusao.tex
src/components/: LocationDisplay.tsx
src/components/__tests__/: LocationDisplay.test.tsx
src/hooks/: useUserLocation.ts
src/hooks/__tests__/: useUserLocation.test.ts
src/navigation/: MainTabs.tsx  RootNavigator.tsx
src/screens/: AddPokemonScreen.tsx  AdoptionBoardScreen.tsx  HomeScreen.tsx  LoginScreen.tsx  PartyScreen.tsx  ProcessesScreen.tsx  ProfileScreen.tsx  RadarScreen.tsx
src/screens/__tests__/: LoginScreen.test.tsx  PartyScreen.test.tsx  ProfileScreen.test.tsx
src/services/: adoptionService.ts  authService.ts  locationService.ts  pokemonService.ts
src/services/__tests__/: adoptionService.test.ts  locationService.test.ts  pokemonService.test.ts
src/store/: AuthContext.tsx
src/theme/: index.tsx
